# simple_database

./: CMakeLists.txt  README.md
DatabaseImplementation/: CMakeLists.txt  DatabaseImplementation.cpp  DatabaseImplementation.h
DatabaseRequestApp/: CMakeLists.txt
DatabaseTests/: CMakeLists.txt  main.cpp
